--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,8 @@
 
   <body>
     <div class="main-container">
-      <div class="sub-container section1"></div>
+      <div class="sub-container section1">
+      </div>
       <div class="sub-container section2">
         <div class="sub-section">
           <div class="intro-section">
